# CTaskManager

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: gantt.h  input.h  teamMember.h
src/: gantt.c  input.c  teamMember.c
